# DrumBin

./: .gitignore  amp_tools.py  app.py  clean_to_wav_configured.sh  drumbin.py  environment.yml  eq_converter_gui.py  float2wav_gui.py  main_app.py  mlp_converter_gui.py  pyproject.toml  readme.md  requirements.txt  test_float_to_wav.py  wav2c_gui.py  wav_utils.py
.github/workflows/: build-conda.yml  build-uv.yml
amp_tools/: __init__.py  eq_converter_gui.py  float2wav_gui.py  float_arr_eq_gui.py  main_app.py  mlp_converter_gui.py  test_float_to_wav.py  wav2c_gui.py  wav_utils.py
amp_tools/dsp/: blt_biquad.py
drumbin/: __init__.py  app.py  bin_beats_gui.py  bin_generator.py  cleaner_gui.py  midi_ppqn_gui.py
vsthost/: CMakeLists.txt
vsthost/src/: Main.cpp
vsthost/webui/: build.mjs  package-lock.json  package.json
vsthost/webui/src/: index.html  style.css
