[project]
name = "drumbin"
version = "0.1.0"
description = "DrumBin project"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "mido==1.3.3",
    "numpy==2.3.4",
    "pyside6==6.9.2",
    "soundfile==0.13.1",
    "pyinstaller",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
